--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: python
 python:
-- '2.7'
-- '3.6'
-- pypy
+  - '2.7'
+  - '3.6'
+install:
+  - pip install pipenv
+  - pipenv install --dev
 script: nosetests
 deploy:
   provider: pypi
