--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ python:
   - '2.7'
   - '3.6'
 install:
-  - pip install pipenv
-  - pipenv install --dev
+  - pip install -e .
+  - pip install nose
 script: nosetests
 deploy:
   provider: pypi
