--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,6 @@ deploy:
     secure: SUQmuolOMCJRQ+eto9EAzSv5Fl57/peSPe/cBFiXrFwYW4Drxtl4KIrw9F9l0Zkwr/0nuJ2PprLY3ddhzDn3gmV3P1SUbmrg2TJSje0+NEttemP0fXZW+M3lJ35txRcIMLQxoDhSpoBv1yDVnqr4GOyvXvoJZZdpouqNTbDHI+8=
   on:
     tags: true
+    python: '3.6'
     distributions: sdist
     repo: iandees/pyosm
